--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-NEXT_PUBLIC_API_KEY=AIzaSyCezYaHUvkFCWvNACHbMoQSNcR7LBPrn24
-NEXT_PUBLIC_AUTH_DOMAIN=chat-app-ce087.firebaseapp.com
-NEXT_PUBLIC_PROJECT_ID=chat-app-ce087
-NEXT_PUBLIC_STORAGE_BUCKET=chat-app-ce087.appspot.com
-NEXT_PUBLIC_MESSSAGING_SENDER_ID=339820104274
-NEXT_PUBLIC_APP_ID=1:339820104274:web:5c2260ad2e75314b37ad8b
+NEXT_PUBLIC_API_KEY=AIzaSyCp7QF3XdCtnxNxqZiuRfCb1Om3LqH2GPQ
+NEXT_PUBLIC_AUTH_DOMAIN=tutormama-4888b.firebaseapp.com
+NEXT_PUBLIC_PROJECT_ID=tutormama-4888b
+NEXT_PUBLIC_STORAGE_BUCKET=tutormama-4888b.firebasestorage.app
+NEXT_PUBLIC_MESSSAGING_SENDER_ID=756880604092
+NEXT_PUBLIC_APP_ID=1:756880604092:web:2f9b967fea27e5929b09b9
