--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@emotion/styled": "^11.10.6",
     "date-fns": "^2.30.0",
     "email-validator": "^2.0.4",
-    "firebase": "^9.22.0",
+    "firebase": "^11.0.2",
     "framer-motion": "^10.12.4",
     "next": "^13.3.1",
     "next-pwa": "^5.6.0",
@@ -55,6 +55,7 @@
     "next-sitemap": "^4.0.7",
     "prettier": "^2.8.8",
     "standard-version": "^9.5.0",
+    "turbo": "^2.3.0",
     "typescript": "^4.9.5"
   },
   "engines": {
