--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "email-validator": "^2.0.4",
     "firebase": "^11.0.2",
     "framer-motion": "^10.12.4",
-    "next": "^13.3.1",
+    "lucide-react": "^0.460.0",
+    "next": "^15.0.3",
     "next-pwa": "^5.6.0",
     "next-seo": "^6.0.0",
     "react": "^18.2.0",
