--- a/turbo.json
+++ b/turbo.json
@@ -1,18 +1,9 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "pipeline": {
+  "tasks": {
     "build": {
-      "dependsOn": ["^build"],
-      "outputs": ["dist/**"]
-    },
-    "lint": {
-      "outputs": []
-    },
-    "test": {
-      "outputs": []
-    },
-    "dev": {
-      "cache": false
+      "outputs": ["dist/**", ".next/**"],
+      "dependsOn": ["^build"]
     }
   }
 }
